syntax = "proto3";

package translation;

option go_package = "./pb";


message GetLangListReq {
}

message  LangData {
  int64 id = 1;
  string lang = 2;
  string code =3;
  bool original =4;
  bool results = 5;
}
message GetLangListResp {
  int64 user_id = 1;
  repeated LangData lang_list = 2;
}


service userService {
  rpc getLangList (GetLangListReq) returns (GetLangListResp);
}
